objects/Cvent_Asset_Maintenance__c.object
<CustomObject>
    <fields>
        <fullName>Cvent_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cvent Asset</label>
        <referenceTo>Cvent_Asset__c</referenceTo>
        <relationshipLabel>Cvent Asset Maintenance</relationshipLabel>
        <relationshipName>Cvent_Asset_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Performed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performed by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cvent Asset Maintenance</relationshipLabel>
        <relationshipName>Cvent_Asset_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled Maintenance</fullName>
                </value>
                <value>
                    <fullName>Hardware Issue</fullName>
                </value>
                <value>
                    <fullName>Software Issue</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cvent Asset Maintenance</label>
    <nameField>
        <displayFormat>AMR-{000000}</displayFormat>
        <label>Cvent Asset Mainta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Asset Maintenance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>